# zpdf

./: .gitignore  LICENSE  README.md  build.zig
.github/workflows/: deploy.yml
benchmark/: .gitignore  README.md  accuracy.py  memory_guard.py  verapdf_bench.py
examples/: parallel.py
python/: README.md  pyproject.toml
python/tests/: test_memory_regression.py  test_zpdf.py
python/zpdf/: __init__.py  _cdef.h
src/: agl.zig  bench.zig  capi.zig  cff.zig  cff_std_strings.zig  decompress.zig  encoding.zig  integration_test.zig  interpreter.zig  layout.zig  main.zig  outline.zig  pagetree.zig  parser.zig  root.zig  simd.zig  structtree.zig  testpdf.zig  wapi.zig  xref.zig
web/: zpdf.wasm
