[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpdf"
version = "0.1.0"
description = "High-performance PDF text extraction powered by Zig"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.8"
dependencies = ["cffi>=1.15"]
authors = [{name = "Lulzx"}]
keywords = ["pdf", "text-extraction", "parser", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Lulzx/zpdf"
Repository = "https://github.com/Lulzx/zpdf"
Issues = "https://github.com/Lulzx/zpdf/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zpdf*"]

[tool.setuptools.package-data]
zpdf = ["*.h", "*.so", "*.dylib", "*.dll"]
